Added resume.html and front page visual attribute tweaks

--- a/profile.html
+++ b/profile.html
@@ -1,9 +1,13 @@
-<!DOCTYPE html>
+<!-- XHTML 1.0 Strict -->>
+<DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<title>Nicholas Hardy & Co.</title>
 		<link rel="stylesheet" href="./css/profile.css">
+		<link rel="stylesheet" href="./css/animations.css">
 	</head>
 	<body>
 	
@@ -13,6 +17,7 @@
 				<h1 id="header-name">Nicholas Hardy</h1>			
 				<h5 id="header-name-sub"><u>Software Development & Quality Assurance</u></h5>
 				<p id="header-tagline"><em>"Engineering Excellence"</em></p>
+				<br>
 		</div>
 		<!----------END TOP HEADER BAR------------------->
 		
@@ -22,18 +27,21 @@
 			
 			
 			<!-------PIC------------>
-			<div id="frontpage-pic">
-				<img src="./images/profile/profile2.png" alt="">
-				<div = id"frontpage-pic-overlay">
-			</div>
+			
+				<div id="frontpage-pic">
+					<img src="./images/profile/profile2.png" alt="">
+					<div = id"frontpage-pic-overlay">
+				</div>
+			
 			<!-------PROFESSIONAL LIST START------->
 			<div id="frontpage-left">
 				<h3 id="frontpage-left-header">Professional</h3>
 				<ul id="frontpage-left-list">
-					<li>Tech Academy Web Development Graduate</li>
 					<li>Ten Years SQA Experience</li>
+					<li><a id="linkedin" href="https://www.learncodinganywhere.com/">Tech Academy</a> Graduate</li>
 					<li><a id="linkedin" href="https://www.linkedin.com/in/nicholas-hardy-9846399">LinkedIn Profile</a></li>
-					<li>Resume</li>
+					<li><a id="linkedin" href="https://github.com/nicstradamus">GitHub</a></li>
+					<li><a id="linkedin" href="resume.html">Resume</li></a>
 				</ul>
 			</div>
 			<!-------PROFESSIONAL LIST STOP------->
